# django-tippanee

./: .gitignore  LICENSE  READEME.md  README.md  setup.cfg
django_tippanee/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
django_tippanee.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
django_tippanee/migrations/: 0001_initial.py
tests/: test_comments.py
