[metadata]
name = django-tippanee
version = 0.1.0
description = A reusable Django app for generic comments with DRF API support
long_description = file: README.md
long_description_content_type = text/markdown
author = Ajit kumar
author_email = ajitkumar.pu@gmail.com
url = https://github.com/urwithajit9/django-tippanee
license = MIT
classifiers =
    Framework :: Django
    Framework :: Django :: 4.2
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
include_package_data = True
install_requires =
    Django>=4.2
    djangorestframework>=3.15
    django-filter>=23.5
python_requires = >=3.8

[options.package_data]
django_generic_comments = migrations/*.py